--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
             <artifactId>axios</artifactId>
             <version>0.19.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
